Revision history for {{$dist->name}}

{{$NEXT}}

0.093331  2011-09-19 15:52:00 America/New_York
          some speed improvements by changing how we use PPI (thanks, Dave
          Rolsky!)

0.093330  2009-11-29 08:43:08 America/New_York
          throw exception if PPI parsing fails

0.093020  2009-10-28
          first release